Fix line item table overflow (#1990)

--- a/src/banking/components/BankingView.module.css
+++ b/src/banking/components/BankingView.module.css
@@ -23,6 +23,10 @@
   padding: 0;
 }
 
+.openEntryCard :global(.combobox-menu) {
+  width: 100%;
+}
+
 .openEntryCardBody {
   padding: var(--flx-padding-card-body);
 }
@@ -121,5 +125,9 @@
   .checkbox {
     padding-left: 12px;
     max-width: var(--flx-width-field-xs);
+  }
+
+  .openEntryCard :global(.combobox-menu) {
+    width: auto;
   }
 }
